Fix flaky scrolling on iOS

--- a/app/layout/cards.sass
+++ b/app/layout/cards.sass
@@ -5,6 +5,7 @@
   left: 0
   height: calc(100% - 3em)
   overflow: scroll
+  -webkit-overflow-scrolling: touch
 
 
 @media (orientation: portrait)
@@ -19,10 +20,11 @@
 .card
   position: relative
   font-family: 'Old Standard'
-  width: 95%
-  margin: 0.5em 2.5%
-  padding: 0.5em
+  width: calc(100% - 1.5rem)
+  margin: 0.75rem
+  padding: 0.5rem
   background-color: rgba(255,255,255,0.95)
+  box-shadow: 0 0.25rem 0.6rem 0 rgba(0, 0, 0, 0.18), 0 0.2rem 0.8rem 0 rgba(0, 0, 0, 0.15)
 
   .card-inner
     height: 100%
@@ -30,6 +32,13 @@
     margin: 0
     padding: 0.5em
     border: 0.1em solid #000
+
+// narrower padding for narrow screens
+@media (max-width: 400px)
+  .card
+    width: calc(100% - 1rem)
+    margin: 0.5rem
+
 
 .card-scroll-spacer
   position: relative
