--- a/app/layout/latchkey.sass
+++ b/app/layout/latchkey.sass
@@ -62,10 +62,11 @@ html
   html
     font-size: 15px
 
-// FOUNDATION
+// basic layout
 html, body
   height: 100%
   width: 100%
+  position: fixed
 
 #top-container
   height: 100%
@@ -82,7 +83,6 @@ html, body
 @media (orientation: landscape)
   #top-container
     background-size: 50%
-
 
 // frequently used style elements
 .byline
